--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "drupal/drupal": "*"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
+    "prefer-stable": false,
     "config": {
         "sort-packages": true,
         "bin-dir": "bin/",
