--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1@stable",
         "localgovdrupal/localgov": "dev-fix/2.x/470-534-remove-patches as 2.3.18",
+        "localgovdrupal/localgov_core": "dev-fix/184-alert-fail as 2.12.0",
         "localgovdrupal/localgov_search_solr": "^1.0@alpha"
     },
     "require-dev": {
